--- a/3/styles.css
+++ b/3/styles.css
@@ -12,29 +12,41 @@
   }
 
   100% {
-    transform: translateY(70px) translateX(40px) rotate(220deg);
+    transform: translateY(70px) translateX(40px) rotate(200deg);
   }
 }
 
 @keyframes animate-shadow {
   0% {
-    border-left: 1px solid transparent;
-    border-right: 139px solid transparent;
+    clip-path: polygon(0% 98%, 75% 100%, 25% 100%);
   }
 
-  25% {
-    border-left: 1px solid transparent;
-    border-right: 139px solid transparent;
+  26% {
+    clip-path: polygon(7% 60%, 75% 100%, 25% 100%);
   }
 
-  35% {
-    border-left: 1px solid transparent;
-    border-right: 139px solid transparent;
+  36% {
+    clip-path: polygon(9% 60%, 75% 100%, 25% 100%);
+  }
+
+  50% {
+    clip-path: polygon(30% 80%, 75% 100%, 25% 100%);
+  }
+
+  62% {
+    clip-path: polygon(65% 80%, 75% 100%, 25% 100%);
+  }
+
+  75% {
+    clip-path: polygon(90% 70%, 75% 100%, 25% 100%);
+  }
+
+  90% {
+    clip-path: polygon(100% 96%, 75% 100%, 25% 100%);
   }
 
   100% {
-    border-left: 139px solid transparent;
-    border-right: 1px solid transparent;
+    clip-path: polygon(100% 98%, 75% 100%, 25% 100%);
   }
 }
 
@@ -44,11 +56,11 @@
   }
 
   25% {
-    border-bottom: 70px solid rgb(255, 255, 255);
+    border-bottom: 70px solid rgb(240, 240, 240);
   }
 
   50% {
-    border-bottom: 70px solid rgb(255, 255, 255);
+    border-bottom: 70px solid rgb(240, 240, 240);
   }
 
   100% {
@@ -70,7 +82,7 @@
   }
 
   70% {
-    border-bottom: 70px solid rgb(255, 255, 255);
+    border-bottom: 70px solid rgb(240, 240, 240);
   }
 
   100% {
@@ -85,7 +97,7 @@
   17% {
     opacity: 100%;
   }
-  68% {
+  72% {
     opacity: 100%;
   }
   100% {
@@ -122,7 +134,7 @@
   border-radius: 100%;
   overflow: hidden;
   opacity: 0%;
-  animation: fade-in-out 4000ms ease-in-out infinite;
+  animation: fade-in-out 4000ms linear infinite;
 }
 
 .sand {
@@ -168,14 +180,12 @@
 }
 
 .shadow {
-  position: absolute;
-  height: 0;
-  width: 0;
+  background-color: rgba(105, 105, 76, 0.596);
+  clip-path: polygon(50% 50%, 75% 100%, 25% 100%);
+  z-index: 1000;
+  height: 100px;
+  width: 280px;
+  transform: translateX(41px) translateY(-80px);
   rotate: 180deg;
-  border-bottom: 40px solid rgba(111, 111, 82, 0.458);
-  border-left: 1px solid transparent;
-  border-right: 1000px solid transparent;
-  transform: translateY(-80px) translateX(-29px);
-  z-index: 4;
-  animation: animate-shadow 4000ms ease-in-out infinite;
+  animation: animate-shadow 4000ms linear infinite;
 }
