--- a/7/styles.css
+++ b/7/styles.css
@@ -29,11 +29,16 @@
   background: white;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.2);
   border-radius: 1%;
+  transition: 650ms;
+}
+
+.main.nav-active {
+  transform: translateX(150px);
 }
 
 .main-header {
   box-sizing: border-box;
-  padding: 25px;
+  padding: 20px;
   background: #569cc8;
   width: 100%;
   height: 60px;
@@ -47,8 +52,30 @@
 .nav-toggle {
   cursor: pointer;
   opacity: 0.6;
-  scale: 1.4;
   transition: opacity 500ms;
+  height: fit-content;
+  width: fit-content;
+}
+
+.bar-n {
+  height: 4px;
+  width: 30px;
+  background: white;
+  border-radius: 4px;
+}
+
+.nav-toggle .bar-n:nth-child(1) {
+  margin-bottom: 8px;
+}
+
+.circle-n {
+  position: absolute;
+  height: 7px;
+  width: 7px;
+  background: white;
+  border-radius: 50%;
+  transform: translateX(25px) translateY(-18px);
+  box-shadow: 0px 0px 0px 3px #569cc8;
 }
 
 .nav-toggle:hover {
@@ -58,12 +85,40 @@
 .search-toggle {
   cursor: pointer;
   opacity: 0.6;
-  scale: 1.2;
+  scale: 1.1;
   transition: opacity 500ms;
 }
 
 .search-toggle:hover {
   opacity: 1;
+}
+
+.search-bar {
+  position: absolute;
+  width: 210px;
+  transform: translateX(10px);
+  height: 30px;
+  border-radius: 35px;
+  border: none;
+  padding-left: 15px;
+  color: rgba(0, 0, 0, 0.5);
+  transition: all 400ms;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.search-bar:focus {
+  outline: none;
+}
+
+.active {
+  display: block;
+}
+
+.search-bar.active {
+  transform: translateX(-5px);
+  opacity: 1;
+  pointer-events: all;
 }
 
 .main-body {
@@ -107,4 +162,48 @@
   z-index: 0;
   position: absolute;
   transform: translateX(-16px) translateY(-9.5px);
+}
+
+.nav {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translate(-20%, -50%);
+  width: 160px;
+  height: 260px;
+  background: #4f7188;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: all 650ms;
+  z-index: -1;
+}
+
+.nav.nav-active {
+  left: 0%;
+  transform: translate(0%, -50%);
+}
+
+.nav-link {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  box-sizing: border-box;
+  transition: all 300ms;
+}
+
+.nav-link:hover {
+  background: #436882;
+  color: white;
+}
+
+.nav-link i {
+  width: 15px;
+  margin: 10px;
 }
